--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 											<span class="icon solid fa-code"></span>
 											<div class="content">
 												<h3>Programming Languages</h3>
-												<p>Python | R | C | C++ | Java | MATLAB | SQL</p>
+												<p>Python | R | SQL (DDL, DML) | Git | C | C++ | Java | MATLAB </p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-laptop-code"></span>
 											<div class="content">
 												<h3>Softwares</h3>
-												<p>Jupyter Notebook | Google Colab | RStudio | Quarto | AMPL | LaTeX | Excel | Power BI | Visual Studio Code | LaTeX (Overleaf) | LIWC | Adobe Premiere Pro</p>
+												<p>Jupyter Notebook | Google Colab | RStudio | GitHub | Quarto | AMPL | LaTeX | Excel | Power BI | Visual Studio Code | LaTeX (Overleaf) | LIWC | Adobe Premiere Pro</p>
 											</div>
 										</article>
 										<article>
@@ -113,7 +113,7 @@
 											<h3>A Study on Sentiment, Length, and Readability in Movie Reviews</h3>
 											<p>This study analyzes how textual metrics such as Sentiment Polarity, Review Length, and Readability Score affect user engagement in Amazon Movie Reviews.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="DACSS758_proj.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
