added code and report buttons

--- a/DACSS758_proj.html
+++ b/DACSS758_proj.html
@@ -43,6 +43,17 @@
                 line-height: 1.6; /* Add spacing between lines for easier reading */
             }
 
+            /* Style for the buttons */
+            .button-container {
+                text-align: center; /* Center the buttons */
+                margin-top: 20px; /* Space above buttons */
+            }
+            .button-container .button {
+                display: inline-block; /* Side-by-side buttons */
+                margin: 0 10px; /* Space between buttons */
+                padding: 10px 20px; /* Smaller padding for smaller buttons */
+                font-size: 14px; /* Smaller font size */
+            }
         </style>
     </head>
 
@@ -52,6 +63,10 @@
         <header>
             <h1 style="text-align: center;">Decoding Review Impact: A Study on Sentiment, Length, and Readability in Movie Reviews</h1>
             <p style="text-align: center;" class="project-description">This study analyzes how textual metrics such as Sentiment Polarity, Review Length, and Readability Score affect user engagement in Amazon Movie Reviews.</p>
+            <div class="button-container">
+                <a href="https://github.com/suryam1504/A-Study-on-Sentiment-Length-and-Readability-in-Movie-Reviews" target="_blank" class="button">Code on GitHub</a>
+                <a href="DACSS758_report.html" target="_blank" class="button">Full Report</a>
+            </div>
         </header>
 
         <!-- Background Section -->
@@ -148,7 +163,7 @@
 
         <!-- Footer -->
         <footer>
-            <p>Code on <a href="https://github.com/suryam1504" target="_blank">GitHub</a>. Created by Suryam Gupta. © 2025</p>
+            <p>Created by Suryam Gupta. © 2025</p>
         </footer>
         </div>
 	</body>
