--- a/DACSS603_report.html
+++ b/DACSS603_report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-    	<title>Full Report - Decoding Review Impact</title>
+    	<title>Full Report - A Causal Inference Analysis of Parental Education and Study Time on Academic Success</title>
     	<meta charset="utf-8" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     	<link rel="stylesheet" href="assets/css/main.css" />
@@ -38,10 +38,10 @@
         </style>
     </head>
 	<body>
-        <h1>Full Report: Decoding Review Impact</h1>
-        <p>Preview the report below or download it using the button.</p>
+        <h1>Full Report: A Causal Inference Analysis of Parental Education and Study Time on Academic Success</h1>
+        <p>Preview the report below or download it.</p>
         <iframe src="assets\pdf\Beyond-the-books-Final-Project.pdf" width="100%" height="600px"></iframe>
-        <a href="assets\pdf\Beyond-the-books-Final-Project.pdf" class="button" download>Download Report</a>
+        <!--<a href="assets\pdf\Beyond-the-books-Final-Project.pdf" class="button" download>Download Report</a>-->
 	</body>
 </html>
 
