finished IDSIA page

--- a/DACSS603_proj.html
+++ b/DACSS603_proj.html
@@ -298,7 +298,7 @@
 
         <!-- Footer -->
         <footer>
-            <p>codes on github, Created by Suryam Gupta. © 2025</p>
+            <p>Created by Suryam Gupta. © 2025</p>
         </footer>
 	</body>
 </html>
