--- a/DACSS603_report.html
+++ b/DACSS603_report.html
@@ -30,15 +30,16 @@
                 background-color: #d9534f;
             }
             iframe {
-                width: 100%;
-                height: 600px;
+                width: 70%; /* Reduced width for a narrower, taller appearance */
+                height: 1000px; /* Increased height for a more vertical look */
                 border: 2px solid #333;
                 margin-top: 20px;
+                border-radius: 5px; /* Optional: rounded corners for consistency */
             }
         </style>
     </head>
 	<body>
-        <h1>Full Report: A Causal Inference Analysis of Parental Education and Study Time on Academic Success</h1>
+        <h1><br>Full Report: A Causal Inference Analysis of Parental Education and Study Time on Academic Success</h1>
         <p>Preview the report below or download it.</p>
         <iframe src="assets\pdf\Beyond-the-books-Final-Project.pdf" width="100%" height="600px"></iframe>
         <!--<a href="assets\pdf\Beyond-the-books-Final-Project.pdf" class="button" download>Download Report</a>-->
