--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 											<h3>Master's Thesis - Evaluating Psychometric Features and Contextual Embeddings Potential for Mental Disorder Classification in Short Biomedical Texts</h3>
 											<p>The study involves extracting psychological and psychometric features such as emotions, intensity, LIWC metrics, and contextual embeddings from short biomedical texts, and analyzing their potential to detect an early presence of either anxiety, panic, and depression in them.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="IDSIA_Biomedical_Texts.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
