--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 											<h3>Analyzing Amazon Reviews, Textual Metrics, and User’s Perceived Helpfulness</h3>
 											<p>This study leverages Natural Language Processing (NLP) techniques to analyze 1M+ Amazon reviews for review length, breadth, readability, writing style, sentiment balance, and other engagement metrics to comprehend their effects on user's engagemnt and perceived helpfulness.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="IIMN_Amazon_Review_NLP.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
