--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     	<link rel="stylesheet" href="assets/css/main.css" />
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+		
+		<!--for fastscrlling-->
+		<style>
+			html {
+				scroll-behavior: smooth;
+			}
+		</style>
     </head>
 
 	<body class="is-preload">
@@ -26,12 +33,12 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Suryam's</strong> Portfolio</a>
 									<ul class="icons">
-										<li><a href="https://github.com/suryam1504" class="icon brands fa-github"><span class="label">Github</span></a></li>
-										<li><a href="https://www.linkedin.com/in/suryamgupta/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/suryam1504" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://www.linkedin.com/in/suryamgupta/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<!-- <li><a href="mailto:suryamgupta12345@gmail.com" class="icon brands fa-envelope"><span class="label">Email</span></a></li>
 										<li><a href="mailto:suryam@example.com"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Gmail" style="width: 20px; height: 20px;"></a></li> -->
-										<li><a href="mailto:suryamgupta12345@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-										<li><a href="https://www.instagram.com/suryam__gupta/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="mailto:suryamgupta12345@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+										<li><a href="https://www.instagram.com/suryam__gupta/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
@@ -40,25 +47,32 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hello there! <br>
-											I’m Suryam Gupta & I'm a Data Scientist aspirant</h1>
+											<h2>Hello there! <br>
+											I’m Suryam Gupta & <br>I'm a Data Scientist aspirant</h2>
 										</header>
-										<p> I am currently a Master's student in Data Analytics and Computational Social Science (DACSS) at the University of Massachusetts Amherst. I am intrigued by Data Science and the concept of finding meaningful insights and underlying patterns from data and building predictive models. I am also into Competitive Programming as I love coding, developing logic to solve problems, and using Data Structures and Algorithms to make time and space-efficient programs. I have previously worked with various Machine Learning projects and am currently exploring Natural Language Processing (NLP). I still want to learn more about the Data Science field and hence spend most of my time exploring and learning various tools and skills.<br> 
-										<br>
+										<p> I am currently a Master's student in Data Analytics and Computational Social Science (DACSS) at the University of Massachusetts 
+											Amherst. I am intrigued by Data Science and the concept of finding meaningful insights and underlying patterns from data and 
+											building predictive models. I am also into Competitive Programming as I love coding, developing logic to solve problems, and 
+											using Data Structures and Algorithms to make time and space-efficient programs. I have previously worked with various Machine 
+											Learning and Natural Language Processing (NLP) projects, and I continue to explore and learn various tools and skills.<br><br>
+											I am currently integrating LangChain to develop LLM-powered applications, including conversational agents, retrieval-augmented 
+											generation (RAG) pipelines, and automated reasoning systems.<br><br>
 										Other things I enjoy: Watching movies and TV shows, Traveling, Playing chess, Reading books, and Playing guitar
-										<br>
-										</p>
-										<ul class="actions">
+										<br></p>
+										<!-- <ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
-										</ul>
+										</ul> -->
 									</div>
+									<!--<span class="image object">
+										<img src="images/Suryam photo cropped.jpg" alt="" width="100" height="auto" />
+									</span>-->
 									<span class="image object">
-										<img src="images/Suryam photo cropped.jpg" alt="" />
-									</span> 
+										<img src="images/Suryam photo cropped.jpg" alt="" style="width: 400px; height: auto;" />
+									</span>
 								</section>
 
 							<!-- Section -->
-								<section>
+								<section id="skills-tools">
 									<header class="major">
 										<h2>Skills and Tools</h2>
 									</header>
@@ -95,25 +109,25 @@
 								</section>
 
 							<!-- Section -->
-								<section>
+								<section id="all-projects">
 									<header class="major">
 										<h2>Projects</h2>
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/causal-inference-thumbnail.svg" alt="" /></a>
 											<h3>A Causal Inference Analysis of Parental Education and Study Time on Academic Success</h3>
 											<p>An inferential analysis on how a student's academic (study-time) and demographic (father's and mother's education level) factors (individually) affect their school performance.</p>
 											<ul class="actions">
-												<li><a href="DACSS603_proj.html" class="button">More</a></li>
+												<li><a href="DACSS603_proj.html" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/movie-reviews-analysis-thumbnail.svg" alt="" /></a>
 											<h3>A Study on Sentiment, Length, and Readability in Movie Reviews</h3>
 											<p>This study analyzes how textual metrics such as Sentiment Polarity, Review Length, and Readability Score affect user engagement in Amazon Movie Reviews.</p>
 											<ul class="actions">
-												<li><a href="DACSS758_proj.html" class="button">More</a></li>
+												<li><a href="DACSS758_proj.html" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -121,7 +135,7 @@
 											<h3>Master's Thesis - Evaluating Psychometric Features and Contextual Embeddings Potential for Mental Disorder Classification in Short Biomedical Texts</h3>
 											<p>The study involves extracting psychological and psychometric features such as emotions, intensity, LIWC metrics, and contextual embeddings from short biomedical texts, and analyzing their potential to detect an early presence of either anxiety, panic, and depression in them.</p>
 											<ul class="actions">
-												<li><a href="IDSIA_Biomedical_Texts.html" class="button">More</a></li>
+												<li><a href="IDSIA_Biomedical_Texts.html" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -129,7 +143,7 @@
 											<h3>Analyzing Amazon Reviews, Textual Metrics, and User’s Perceived Helpfulness</h3>
 											<p>This study leverages Natural Language Processing (NLP) techniques to analyze 1M+ Amazon reviews for review length, breadth, readability, writing style, sentiment balance, and other engagement metrics to comprehend their effects on user's engagemnt and perceived helpfulness.</p>
 											<ul class="actions">
-												<li><a href="IIMN_Amazon_Review_NLP.html" class="button">More</a></li>
+												<li><a href="IIMN_Amazon_Review_NLP.html" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -137,7 +151,7 @@
 											<h3>Linear & Integer Optimization using Python PuLP and AMPL</h3>
 											<p>Worked with 16 real-life optimization problems; constructed their mathematical models, and found their optimal solution using CBC and CPLEX solver by employing AMPL software and the PuLP library of Python.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -145,7 +159,7 @@
 											<h3>Credit Card Fraud Detection</h3>
 											<p>A group project where we worked on a Kaggle credit card dataset with 300,000 rows and 122 features, followed by Exploratory Data Analysis (EDA), data visualization, and building a Logistic Regression model to accurately predict if a loan should be sanctioned to a new customer or not.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -153,7 +167,7 @@
 											<h3>House Price Prediction</h3>
 											<p>Developed a Machine Learning model using Linear Regression on a Kaggle dataset which predicts house prices based on their various attributes by implementing Exploratory Data Analysis (EDA), Data Cleaning and Pre-processing, and Data Visualization.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -161,7 +175,7 @@
 											<h3>Sales Analysis</h3>
 											<p>Merged, cleaned, and pre-processed 12 months of sales data to conduct Exploratory Data Analysis (EDA), create graphs and charts to find meaningful insights and patterns, and lastly, answered corporate questions such as the best city, month, and earning of sales, pre-eminent timings for displaying advertisements to maximize the likelihood of customers buying, products sold the most together, etc.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 									</div>
@@ -175,23 +189,27 @@
 						<div class="inner">
 
 							<!-- Search -->
-								<section id="search" class="alt">
+								<!-- <section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
-								</section>
+								</section> -->
 
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
-										<h2>Menu</h2>
+										<h2><br><br><br>Menu</h2>
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="#resume">Resume</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
-										<li>
+										<li><a href="resume.html" target="_blank">Resume and CV</a></li>
+										<li><a href="#skills-tools">Skills and Tools</a></li>
+										<li><a href="#all-projects">Projects</a></li>
+										
+										<li><a href="generic.html">Education</a></li>
+										<!--<li><a href="elements.html">Elements</a></li>-->
+
+										<!-- <li>
 											<span class="opener">Submenu</span>
 											<ul>
 												<li><a href="#">Lorem Dolor</a></li>
@@ -213,23 +231,24 @@
 										</li>
 										<li><a href="#">Maximus Erat</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="#">Amet Lacinia</a></li> -->
 									</ul>
 								</nav>
 
 							<!-- Section -->
-								<section id="resume">
+								<!--<section id="resume">
 								    <header class="major">
 								        <h2>Resume</h2>
 								    </header>
 								    <p>You can view my resume below or download it using the button:</p>
-								    <iframe src="My Files/Suryam_Gupta_Resume.pdf" width="100%" height="600px" style="border: none;"></iframe>
+								    <iframe src="assets/pdf/Suryam_Gupta_Resume.pdf" width="100%" height="400px" style="border: none;"></iframe>
 								    <ul class="actions">
-								        <li><a href="My Files/Suryam_Gupta_Resume.pdf" class="button" download>Download My Resume</a></li>
+										<li><a href="assets/pdf/Suryam_Gupta_Resume.pdf" class="button" target="_blank">View with Zoom</a></li>
+								        <li><a href="assets/pdf/Suryam_Gupta_Resume.pdf" class="button" download>Download My Resume</a></li> 
 								    </ul>
-								</section>
+								</section> -->
 
-								<section>
+								<!-- <section>
 									<header class="major">
 										<h2>Ante interdum</h2>
 									</header>
@@ -250,25 +269,35 @@
 									<ul class="actions">
 										<li><a href="#" class="button">More</a></li>
 									</ul>
-								</section>
+								</section> -->
 
 							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>Feel free to contact me through any of the following:</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope">
+											<a href="mailto:suryamgupta12345@gmail.com" target="_blank">
+												suryamgupta12345@gmail.com  <!--web crawler protection hehe-->
+											</a>
+										</li>
+										<li class="icon solid fa-phone">+1(413) 510-7695</li>
+										<li class="icon brands fa-linkedin">
+											<a href="https://www.linkedin.com/in/suryamgupta/" target="_blank">linkedin.com/in/suryamgupta</a>
+										</li>
+										<li class="icon brands fa-github">
+											<a href="https://github.com/suryam1504" target="_blank">github.com/suryam1504</a>
+										</li>
+										<li class="icon solid fa-home">165 Brittany Manor Drive<br>Amherst, MA 01002</li>
 									</ul>
+									
 								</section>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; Suryam Gupta. <br>All rights reserved.<br> Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
 						</div>
