IIMA proj added

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 											<h3>Linear & Integer Optimization using Python PuLP and AMPL</h3>
 											<p>Worked with 16 real-life optimization problems; constructed their mathematical models, and found their optimal solution using CBC and CPLEX solver by employing AMPL software and the PuLP library of Python.</p>
 											<ul class="actions">
-												<li><a href="#" target="_blank" class="button">More</a></li>
+												<li><a href="IIMA_Linear_Optimization.html" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -206,7 +206,7 @@
 										<li><a href="#skills-tools">Skills and Tools</a></li>
 										<li><a href="#all-projects">Projects</a></li>
 										
-										<li><a href="generic.html">Education</a></li>
+										<li><a href="#">Education</a></li>
 										<!--<li><a href="elements.html">Elements</a></li>-->
 
 										<!-- <li>
