added iima thumbnail

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/IIMA_Thumbnail.png" alt="" /></a>
 											<h3>Linear & Integer Optimization using Python PuLP and AMPL</h3>
 											<p>Worked with 16 real-life optimization problems; constructed their mathematical models, and found their optimal solution using CBC and CPLEX solver by employing AMPL software and the PuLP library of Python.</p>
 											<ul class="actions">
