--- a/index.html
+++ b/index.html
@@ -154,15 +154,15 @@
 												<li><a href="IIMA_Linear_Optimization.html" target="_blank" class="button">More</a></li>
 											</ul>
 										</article>
-										<article>
+										<!--<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3>Credit Card Fraud Detection</h3>
 											<p>A group project where we worked on a Kaggle credit card dataset with 300,000 rows and 122 features, followed by Exploratory Data Analysis (EDA), data visualization, and building a Logistic Regression model to accurately predict if a loan should be sanctioned to a new customer or not.</p>
 											<ul class="actions">
-												<li><a href="#" target="_blank" class="button">More</a></li>
+												<li><a href="Credit_Card_FD_proj.html" target="_blank" class="button">More</a></li>
 											</ul>
-										</article>
-										<article>
+										</article> -->
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3>House Price Prediction</h3>
 											<p>Developed a Machine Learning model using Linear Regression on a Kaggle dataset which predicts house prices based on their various attributes by implementing Exploratory Data Analysis (EDA), Data Cleaning and Pre-processing, and Data Visualization.</p>
@@ -177,7 +177,7 @@
 											<ul class="actions">
 												<li><a href="#" target="_blank" class="button">More</a></li>
 											</ul>
-										</article>
+										</article> -->
 									</div>
 								</section>
 
@@ -206,7 +206,7 @@
 										<li><a href="#skills-tools">Skills and Tools</a></li>
 										<li><a href="#all-projects">Projects</a></li>
 										
-										<li><a href="#">Education</a></li>
+										<li><a href="Education.html" target="_blank">Education</a></li>
 										<!--<li><a href="elements.html">Elements</a></li>-->
 
 										<!-- <li>
