completed edu & added pub

--- a/IIMA_Linear_Optimization.html
+++ b/IIMA_Linear_Optimization.html
@@ -182,7 +182,7 @@
 
             <!-- 16 Problems Individually Section -->
             <section id="problems-individually">
-                <h2>16 Problems Individually</h2>
+                <h2><br>16 Problems Individually</h2>
                 <ol>
                     <li><a href="https://drive.google.com/file/d/1XGwbsR0aWLtVt2ODMmPXsn2km5WAm0oX/view?usp=sharing" target="_blank">Bluesky - Bluesky Airlines Problem PDF</a>&nbsp&nbsp&nbsp&nbsp&nbsp             
                     <a href="https://drive.google.com/file/d/1GVsbi964yaRbUkiDBg4Kv9dQbxqKxTOA/view?usp=sharing" target="_blank">Bluesky - 1-2 Bluesky Afterclass PDF</a> </li>
