--- a/IIMN_Amazon_Review_NLP.html
+++ b/IIMN_Amazon_Review_NLP.html
@@ -290,14 +290,14 @@
             </section>
 
             <!-- Citation Section -->
-            <section id="citation">
+            <!--<section id="citation">
                 <h2>Citation</h2>
                 <p>Please cite the following if you use the data in any way: <br>
                     <i>Ni, J., Li, J., & McAuley, J. (2019, November). Justifying recommendations using distantly-labeled
                     reviews and fine-grained aspects. In Proceedings of the 2019 conference on empirical methods in
                     natural language processing and the 9th international joint conference on natural language
                     processing (EMNLP-IJCNLP) (pp. 188-197).</i></p>
-            </section>
+            </section>-->
 
             <!-- Footer -->
             <footer>
