--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 										<!-- <li><a href="mailto:suryamgupta12345@gmail.com" class="icon brands fa-envelope"><span class="label">Email</span></a></li>
 										<li><a href="mailto:suryam@example.com"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Gmail" style="width: 20px; height: 20px;"></a></li> -->
 										<li><a href="mailto:suryamgupta12345@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-										<li><a href="https://www.instagram.com/suryam__gupta/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<!--<li><a href="https://www.instagram.com/suryam__gupta/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
+										<!--<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>-->
 									</ul>
 								</header>
 
@@ -48,7 +48,7 @@
 									<div class="content">
 										<header>
 											<h2>Hello there! <br>
-											I’m Suryam Gupta & <br>I'm a Data Scientist aspirant</h2>
+											I’m Suryam Gupta</h2>
 										</header>
 										<p> I am currently a Master's student in Data Analytics and Computational Social Science (DACSS) at the University of Massachusetts 
 											Amherst. I am intrigued by Data Science and the concept of finding meaningful insights and underlying patterns from data and 
@@ -115,43 +115,43 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/causal-inference-thumbnail.svg" alt="" /></a>
-											<h3>A Causal Inference Analysis of Parental Education and Study Time on Academic Success</h3>
+											<a href="DACSS603_proj.html" class="image"><img src="images/causal-inference-thumbnail.svg" alt="" /></a>
+											<h3><a href="DACSS603_proj.html">A Causal Inference Analysis of Parental Education and Study Time on Academic Success</a></h3>
 											<p>An inferential analysis on how a student's academic (study-time) and demographic (father's and mother's education level) factors (individually) affect their school performance.</p>
 											<ul class="actions">
-												<li><a href="DACSS603_proj.html" target="_blank" class="button">More</a></li>
+												<li><a href="DACSS603_proj.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/movie-reviews-analysis-thumbnail.svg" alt="" /></a>
-											<h3>A Study on Sentiment, Length, and Readability in Movie Reviews</h3>
+											<a href="DACSS758_proj.html" class="image"><img src="images/movie-reviews-analysis-thumbnail.svg" alt="" /></a>
+											<h3><a href="DACSS758_proj.html">A Study on Sentiment, Length, and Readability in Movie Reviews</a></h3>
 											<p>This study analyzes how textual metrics such as Sentiment Polarity, Review Length, and Readability Score affect user engagement in Amazon Movie Reviews.</p>
 											<ul class="actions">
-												<li><a href="DACSS758_proj.html" target="_blank" class="button">More</a></li>
+												<li><a href="DACSS758_proj.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Master's Thesis - Evaluating Psychometric Features and Contextual Embeddings Potential for Mental Disorder Classification in Short Biomedical Texts</h3>
+											<a href="IDSIA_Biomedical_Texts.html" class="image"><img src="images/mental-disorder-classification-thumbnail.svg" alt="" /></a>
+											<h3><a href="IDSIA_Biomedical_Texts.html">Master's Thesis - Evaluating Psychometric Features and Contextual Embeddings Potential for Mental Disorder Classification in Short Biomedical Texts</a></h3>
 											<p>The study involves extracting psychological and psychometric features such as emotions, intensity, LIWC metrics, and contextual embeddings from short biomedical texts, and analyzing their potential to detect an early presence of either anxiety, panic, and depression in them.</p>
 											<ul class="actions">
-												<li><a href="IDSIA_Biomedical_Texts.html" target="_blank" class="button">More</a></li>
+												<li><a href="IDSIA_Biomedical_Texts.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Analyzing Amazon Reviews, Textual Metrics, and User’s Perceived Helpfulness</h3>
+											<a href="IIMN_Amazon_Review_NLP.html" class="image"><img src="images/amazon-reviews-thumbnail.svg" alt="" /></a>
+											<h3><a href="IIMN_Amazon_Review_NLP.html">Analyzing Amazon Reviews, Textual Metrics, and User’s Perceived Helpfulness</a></h3>
 											<p>This study leverages Natural Language Processing (NLP) techniques to analyze 1M+ Amazon reviews for review length, breadth, readability, writing style, sentiment balance, and other engagement metrics to comprehend their effects on user's engagemnt and perceived helpfulness.</p>
 											<ul class="actions">
-												<li><a href="IIMN_Amazon_Review_NLP.html" target="_blank" class="button">More</a></li>
+												<li><a href="IIMN_Amazon_Review_NLP.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/IIMA_Thumbnail.png" alt="" /></a>
-											<h3>Linear & Integer Optimization using Python PuLP and AMPL</h3>
+											<a href="IIMA_Linear_Optimization.html" class="image"><img src="images/IIMA_Thumbnail.png" alt="" /></a>
+											<h3><a href="IIMA_Linear_Optimization.html">Linear & Integer Optimization using Python PuLP and AMPL</a></h3>
 											<p>Worked with 16 real-life optimization problems; constructed their mathematical models, and found their optimal solution using CBC and CPLEX solver by employing AMPL software and the PuLP library of Python.</p>
 											<ul class="actions">
-												<li><a href="IIMA_Linear_Optimization.html" target="_blank" class="button">More</a></li>
+												<li><a href="IIMA_Linear_Optimization.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<!--<article>
@@ -202,10 +202,10 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="resume.html" target="_blank">Resume and CV</a></li>
+										<li><a href="resume.html" target="_blank">Resume</a></li>
 										<li><a href="#skills-tools">Skills and Tools</a></li>
 										<li><a href="#all-projects">Projects</a></li>
-										
+										<li><a href="Research_Publications.html">Research Publications</a></li>
 										<li><a href="Education.html" target="_blank">Education</a></li>
 										<!--<li><a href="elements.html">Elements</a></li>-->
 
@@ -283,7 +283,7 @@
 												suryamgupta12345@gmail.com  <!--web crawler protection hehe-->
 											</a>
 										</li>
-										<li class="icon solid fa-phone">+1(413) 510-7695</li>
+										<li class="icon solid fa-phone">+1 (413) 510-7695</li>
 										<li class="icon brands fa-linkedin">
 											<a href="https://www.linkedin.com/in/suryamgupta/" target="_blank">linkedin.com/in/suryamgupta</a>
 										</li>
