--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-    	<title>Suryam's Resume and CV</title>
+    	<title>Suryam's Resume</title>
     	<meta charset="utf-8" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     	<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,11 +45,11 @@
         <!--<a href="assets\pdf\TAD24 - Decoding Review Impact_ A Study on Sentiment, Length, and Readability in Movie Reviews - Suryam Gupta.pdf" class="button" download>Download Report</a>-->
 	</body>
 
-    <body>
+    <!-- <body>
         <h1><br>Suryam's Curriculum Vitae</h1>
         <p>Preview the report below or download it.</p>
         <iframe src="assets\pdf\Suryam_Gupta_Curriculum_Vitae.pdf" width="100%" height="600px"></iframe>
-        <!--<a href="assets\pdf\TAD24 - Decoding Review Impact_ A Study on Sentiment, Length, and Readability in Movie Reviews - Suryam Gupta.pdf" class="button" download>Download Report</a>-->
-	</body>
+        <a href="assets\pdf\TAD24 - Decoding Review Impact_ A Study on Sentiment, Length, and Readability in Movie Reviews - Suryam Gupta.pdf" class="button" download>Download Report</a>
+	</body> -->
 </html>
 
